Add response documentation for user update request in swagger file
